--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,58 @@
+a {
+	text-decoration: none;
+}
+
 .App {
-  text-align: center;
+  background-color: #f2f2f2;
+  padding: 30px;
+  font-size: 0.7em;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.MainContent {
+	background-color: #d8d8d8;
+	height: 800px;
+	padding: 30px;
+	margin-top: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.SearchInput {
+	width: 200px;
+	height: 30px;
+	padding: 8px;
 }
 
-.App-link {
-  color: #61dafb;
+.Results {
+	position: absolute;
+	width: 220px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ResultsTitle {
+	background-color: #f6f5f6;
+	padding: 8px;
 }
+
+.ResultItem {
+	background-color: white;
+	border-bottom: 1px solid #f6f5f6;
+	padding: 8px;
+}
+
+.ResultItem a {
+	color: black;
+}
+
+.ResultItem--Selected {
+	background-color: #5b72a8;
+	padding: 8px;
+}
+
+.ResultItem--Selected a {
+	color: white ;
+}
+
+.Avatar {
+	width: 30px;
+	margin-right: 10px;
+	vertical-align: middle;
+}
+
